--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="container">
 			<h1>点名系统</h1>
 			<form class="form1" id="f1">
-				<a href="setnew.html">发布一次点名</a>
+				<a href="setnew.html">发布一次点名</a><br>
 				<a href="checkup.html">查询点名情况</a><br>
 				<a href="join.html">学生入口</a>
 			</form>
