--- a/checkup.html
+++ b/checkup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<form action="join.php" method="POST" name="Set">
+	<form action="checkup.php" method="POST" name="Set">
 		
 		<!-- 学号:<input type="text" name="stuid" ><br>
 		姓名:<input type="text" name="stuname"><br> -->
