--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html" /><meta charset="utf-8" />
-	<title>UPICK</title>
+	<meta http-equiv="content-type" content="text/html" /><meta charset="utf-8" />	
+
+<title>UPICK</title>
+
+<style>
+	body{
+		font:normal 100% ;
+		font-family:'Microsoft YaHei';
+	    	}
+	form{
+		text-align:center;
+		}
+    	h1{
+		text-align:center;
+		}		
+
+
+
+
+</style>
 </head>
 <body>
 	<div class="wrapper">
