--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html" /><meta charset="utf-8" />	
-
+	<meta name=”viewport” content=”width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes” />
 <title>UPICK</title>
 
 <style>
@@ -16,9 +16,6 @@
     	h1{
 		text-align:center;
 		}		
-
-
-
 
 </style>
 </head>
