--- a/appjoin.html
+++ b/appjoin.html
@@ -8,8 +8,8 @@
 
 	<form action="appjoin.php" method="POST" name="Set">
 		
-		学号:<input type="text" name="stuid" ><br>
-		姓名:<input type="text" name="stuname"><br>
+		学号:<input type="text" name="stuId" ><br>
+		姓名:<input type="text" name="stuName"><br>
         	口令:<input type="text" name="keyword"><br>
 		<input type="submit" value="提交"><br>
 		
