--- a/appjoin.html
+++ b/appjoin.html
@@ -9,8 +9,9 @@
 	<form action="appjoin.php" method="POST" name="Set">
 		
 		学号:<input type="text" name="stuId" ><br>
+		NFC:<input type="text" name="nfcId"><br>
 		姓名:<input type="text" name="stuName"><br>
-        	口令:<input type="text" name="keyword"><br>
+        		口令:<input type="text" name="keyword"><br>
 		<input type="submit" value="提交"><br>
 		
 	</form>
