--- a/setnew.html
+++ b/setnew.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<form action="setnew.php" method="POST" name="Set">
+	<form action="?check" method="POST">
 		
 		教师姓名:<input type="text" name="tname" ><br>
 		课程姓名:<input type="text" name="classname"><br>
