--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 	<title>点名时间到</title>
 	<link href="css/index.css" rel="stylesheet" type="text/css" />
 </head>
-<body   onselectstart="return false">
+<body >
 <div id="mobile">
 	<div id="header">
 		<span>点名</span>
