--- a/checkup.html
+++ b/checkup.html
@@ -88,7 +88,7 @@
 	</div>
 	<div id="checked"><br/><br/>
 			<form action="checkup.php" method="POST" name="Set">
-        		<input type="text" name="classnaem" placeholder="课程名称"><br/><br/>
+        		<input type="text" name="classname" placeholder="课程名称"><br/><br/>
         		<input type="text" name="classid" placeholder="课程序号"><br/><br/>
 				<input id="submit" type="submit" value="提交"><br>
 	    </form>
