--- a/test.html
+++ b/test.html
@@ -7,11 +7,12 @@
 	<title>点名时间到</title>
 	<link href="css/index.css" rel="stylesheet" type="text/css" />
 </head>
-<body >
+<body>
 <div id="mobile">
 	<div id="header">
 		<span>点名</span>
 	</div>
+		<div id="link"><span id="test"></span></div>
 	<div id="footer">
 		<span>本系统由物光院开发</span>
 	</div>
